<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/inputText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_export_input_ean13"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/generateEan13Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_generate_ean13"
        app:layout_constraintTop_toBottomOf="@+id/inputText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/generateQrButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/button_generate_qr"
        app:layout_constraintTop_toBottomOf="@+id/generateEan13Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/generatedCode"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generateQrButton" />

</androidx.constraintlayout.widget.ConstraintLayout>